force-app/main/default/objects/Levy_and_Garnishment__c/Levy_and_Garnishment__c.object-meta.xml
<CustomObject>
    <description>Custom object used to track Levy and Garnishment records. This object is part of EMS&apos;s FSC Accelerator.</description>
    <label>Levy and Garnishment</label>
    <nameField>
        <displayFormat>LG-{000000000}</displayFormat>
        <label>Levy and Garnishment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Levies and Garnishments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>