force-app/main/default/objects/Levy_and_Garnishment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person account or business related to this Levy/Garnishment record.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Levies and Garnishments</relationshipLabel>
    <relationshipName>Levies_and_Garnishments</relationshipName>
    <type>Lookup</type>
</CustomField>