force-app/main/default/objects/Levy_and_Garnishment__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Answer</label>
    <type>TextArea</type>
</CustomField>