force-app/main/default/objects/Levy_and_Garnishment__c/fields/Answer_Date__c.field-meta.xml
<CustomField>
    <fullName>Answer_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Answer Date</label>
    <type>Date</type>
</CustomField>