force-app/main/default/objects/Levy_and_Garnishment__c/fields/Cashier_s_Check_Number__c.field-meta.xml
<CustomField>
    <fullName>Cashier_s_Check_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cashier&apos;s Check Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>