force-app/main/default/objects/Levy_and_Garnishment__c/fields/Court_Signed_Order_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Court_Signed_Order_Received_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Court Signed Order Received Date</label>
    <type>Date</type>
</CustomField>