force-app/main/default/objects/Levy_and_Garnishment__c/fields/Date_of_Levy_Release__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Levy_Release__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Levy Release</label>
    <type>Date</type>
</CustomField>