force-app/main/default/objects/Levy_and_Garnishment__c/fields/Date_Paperwork_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Paperwork_Received__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Paperwork Received</label>
    <type>Date</type>
</CustomField>