force-app/main/default/objects/Levy_and_Garnishment__c/fields/Freeze_Funds__c.field-meta.xml
<CustomField>
    <fullName>Freeze_Funds__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Freeze Funds</label>
    <type>Checkbox</type>
</CustomField>