force-app/main/default/objects/Levy_and_Garnishment__c/fields/Hold_Funds_in_GL__c.field-meta.xml
<CustomField>
    <fullName>Hold_Funds_in_GL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hold Funds in GL</label>
    <type>Checkbox</type>
</CustomField>