force-app/main/default/objects/Levy_and_Garnishment__c/fields/Identify_Customer__c.field-meta.xml
<CustomField>
    <fullName>Identify_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Identify Customer</label>
    <type>Checkbox</type>
</CustomField>