force-app/main/default/objects/Levy_and_Garnishment__c/fields/Lawyers_Office_Details__c.field-meta.xml
<CustomField>
    <fullName>Lawyers_Office_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lawyer&apos;s Office Details</label>
    <type>TextArea</type>
</CustomField>