force-app/main/default/objects/Levy_and_Garnishment__c/fields/Received_By__c.field-meta.xml
<CustomField>
    <fullName>Received_By__c</fullName>
    <label>Received By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Website/Email</fullName>
            </value>
            <value>
                <fullName>Officially Served</fullName>
            </value>
            <value>
                <fullName>Certified Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>