force-app/main/default/objects/Levy_and_Garnishment__c/fields/Received_From__c.field-meta.xml
<CustomField>
    <fullName>Received_From__c</fullName>
    <label>Received From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Department of Revenue</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>IRS</fullName>
            </value>
            <value>
                <fullName>Unemployment</fullName>
            </value>
            <value>
                <fullName>Child Support</fullName>
            </value>
            <value>
                <fullName>Lawyer’s Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>