force-app/main/default/objects/Levy_and_Garnishment__c/fields/Send_Funds_By__c.field-meta.xml
<CustomField>
    <fullName>Send_Funds_By__c</fullName>
    <label>Send Funds By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cashier&apos;s Check</fullName>
            </value>
            <value>
                <fullName>Debits from GL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>