force-app/main/default/objects/Levy_and_Garnishment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Levy</fullName>
            </value>
            <value>
                <fullName>Continuous Levy</fullName>
            </value>
            <value>
                <fullName>Garnishment</fullName>
            </value>
            <value>
                <fullName>Subpoena</fullName>
            </value>
            <value>
                <fullName>Summons</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>