force-app/main/default/objects/Levy_and_Garnishment__c/validationRules/ReceivedFrom_State_Req.validationRule-meta.xml
<ValidationRule>
    <fullName>ReceivedFrom_State_Req</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL( Received_From__c , &quot;State&quot;) ,
 ISBLANK( TEXT( State__c ) ) 
)</errorConditionFormula>
    <errorDisplayField>State__c</errorDisplayField>
    <errorMessage>You have selected &quot;State&quot; for &quot;Received From&quot; - please specify which state before saving the record.</errorMessage>
</ValidationRule>