force-app/main/default/objects/Levy_and_Garnishment__c/validationRules/SendFundsBy_CashiersChck_Req.validationRule-meta.xml
<ValidationRule>
    <fullName>SendFundsBy_CashiersChck_Req</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL( Send_Funds_By__c , &quot;Cashier&apos;s Check&quot;) ,
 ISBLANK( Cashier_s_Check_Number__c ) 
)</errorConditionFormula>
    <errorDisplayField>Cashier_s_Check_Number__c</errorDisplayField>
    <errorMessage>You have selected &quot;Cashier&apos;s Check&quot; for &quot;Send Funds By&quot; - please provide details in the &quot;Cashier&apos;s Check Number&quot; field  before saving the record.</errorMessage>
</ValidationRule>